Also show user details popover on post author avatar click

--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -21,6 +21,10 @@
     border-top: 1px solid lighten($lightGrey, 20%);
   }
 
+  &__author-avatar:hover {
+    cursor: pointer;
+  }
+
   &__comments-label-desktop {
     display: none;
     @media only screen and (min-width: 480px) {
