--- a/rtg/src/components/standings/UserDetailsPopover.scss
+++ b/rtg/src/components/standings/UserDetailsPopover.scss
@@ -101,4 +101,10 @@ $avatarSize: 140px;
   &__username {
     margin-bottom: 15px;
   }
+
+  animation: appear 375ms cubic-bezier(0.23, 1, 0.32, 1);
+  @keyframes appear {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
 }
