Navigate to bets page when a game is clicked
In order to be accessible, also make the game focusable and
navigate when Enter key is pressed.

--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -17,6 +17,10 @@
 
   background-color: #e3e3e3;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   .hometeam, .awayteam {
     display: none;
     text-transform: uppercase;
