--- a/rtg/src/components/Footer.scss
+++ b/rtg/src/components/Footer.scss
@@ -37,11 +37,10 @@
 
   &__logo {
     margin-right: 15px;
-    padding-bottom: 10px;
+    padding-bottom: 0;
 
-    @media only screen and (max-width : 767px) {
-      height: 30px;
-      padding-bottom: 0;
+    @media only screen and (min-width : 768px) {
+      padding-bottom: 10px;
     }
   }
 
