--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -17,8 +17,10 @@
 
   background-color: #e3e3e3;
 
-  &:hover {
-    cursor: pointer;
+  &--clickable {
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .hometeam, .awayteam {
