--- a/rtg/src/components/Footer.scss
+++ b/rtg/src/components/Footer.scss
@@ -7,7 +7,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
 
   @media only screen and (max-width : 767px) {
     padding: 40px 30px;
