--- a/rtg/src/components/LoginForm.scss
+++ b/rtg/src/components/LoginForm.scss
@@ -21,7 +21,7 @@
   &__second-button-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
   }
 
   @media only screen and (min-width : 480px) {
