--- a/rtg/src/components/bets/BetsStatusPanel.scss
+++ b/rtg/src/components/bets/BetsStatusPanel.scss
@@ -5,8 +5,8 @@ $height: 60px;
 
 .BetsStatusPanel {
   position: fixed;
-  left: -20px;
-  right: -20px;
+  left: 0;
+  right: 0;
   bottom: 0;
   height: $height;
 
@@ -42,8 +42,8 @@ $height: 60px;
   &__saving-overlay {
     position: absolute;
     top: 0;
-    left: -20px;
-    right: -20px;
+    left: 0;
+    right: 0;
     bottom: -100px; // also cover the flags which exceed the bottom border of the parent div a bit
     opacity: 0.5;
     background-color: white;
