--- a/rtg/src/components/news/News.scss
+++ b/rtg/src/components/news/News.scss
@@ -2,15 +2,20 @@
 
 .News {
   position: relative;
-  margin: 20px auto;
+  margin: 20px auto 0;
+  padding-bottom: 75px;
   max-width: 1024px;
 
   &__add-button {
-    position: fixed;
+    position: absolute;
     bottom: 24px;
     right: 24px;
 
     z-index: $zAddNewsButton;
+
+    &--fixed {
+      position: fixed;
+    }
   }
 
   &__empty-state {
