--- a/rtg/src/components/news/News.scss
+++ b/rtg/src/components/news/News.scss
@@ -3,19 +3,15 @@
 .News {
   position: relative;
   margin: 20px auto 0;
-  padding-bottom: 75px;
   max-width: 1024px;
 
   &__add-button {
-    position: absolute;
-    bottom: 24px;
-    right: 24px;
+    position: sticky;
+    padding: 0 24px 24px;
+    bottom: 0;
 
+    text-align: right;
     z-index: $zAddNewsButton;
-
-    &--fixed {
-      position: fixed;
-    }
   }
 
   &__empty-state {
