Make saving panel positioning sticky, with a more or less working version in IE (it still floats over the footer there)

--- a/rtg/src/components/bets/BetsStatusPanel.scss
+++ b/rtg/src/components/bets/BetsStatusPanel.scss
@@ -4,11 +4,13 @@
 $height: 60px;
 
 .BetsStatusPanel {
-  position: fixed;
-  left: 0;
-  right: 0;
+  position: sticky;
   bottom: 0;
   height: $height;
+  padding: 0 10px;
+  margin: 0 -10px;
+
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -17,7 +19,7 @@ $height: 60px;
   align-items: center;
 
   background-color: white;
-  box-sizing: border-box;
+  box-sizing: content-box; // in order to have padding token into account with width 100 %
   box-shadow: rgba(0, 0, 0, 0.32) 0 5px 30px, rgba(0, 0, 0, 0.32) 0 0 15px;
 
   transition:
