--- a/rtg/src/components/bets/BetsStatusPanel.scss
+++ b/rtg/src/components/bets/BetsStatusPanel.scss
@@ -23,10 +23,14 @@ $height: 60px;
   box-shadow: rgba(0, 0, 0, 0.32) 0 5px 30px, rgba(0, 0, 0, 0.32) 0 0 15px;
 
   transition:
-          bottom 375ms cubic-bezier(0.4, 0.0, 0.2, 1),
+          height 375ms cubic-bezier(0.4, 0.0, 0.2, 1),
           background-color 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
 
   z-index: $zGameBetsTabSavingProgress;
+
+  &--hidden {
+    height: 0;
+  }
 
   &--success {
     background-color: lighten($success, 30%);
@@ -44,9 +48,9 @@ $height: 60px;
   &__saving-overlay {
     position: absolute;
     top: 0;
-    left: 0;
     right: 0;
-    bottom: -100px; // also cover the flags which exceed the bottom border of the parent div a bit
+    bottom: 0;
+    left: 0;
     opacity: 0.5;
     background-color: white;
     z-index: $zGameBetsTabSavingProgress;
