--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -2,6 +2,8 @@
 
 .SchedulePage {
   &__toolbar {
+    position: sticky;
+    top: 0;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -13,15 +15,6 @@
     font-family: 'Roboto', sans-serif;
 
     box-sizing: border-box;
-
-    &.sticky {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      margin: 0;
-      width: 100%;
-    }
   }
   &__toolbar-title {
     margin-left: 20px;
