Use stickybits to make sticky Schedule toolbar also work in IE

--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -7,15 +7,22 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    z-index: $zScheduleToolbar;
     padding: 15px 5px;
 
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
     font-family: 'Roboto', sans-serif;
 
+    z-index: $zScheduleToolbar;
     box-sizing: border-box;
+
+    // Fix for sticky toolbar on IE
+    &.js-is-sticky,
+    &.js-is-stuck {
+      width: 100%;
+    }
   }
+
   &__toolbar-title {
     margin-left: 20px;
     text-align: left;
