--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -18,6 +18,8 @@
   background-size: cover;
   background-position-x: 50%;
 
+  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+
   box-sizing: border-box;
 
   &__heading {
