--- a/rtg/src/components/standings/StandingsTable.scss
+++ b/rtg/src/components/standings/StandingsTable.scss
@@ -15,9 +15,25 @@
     }
   }
 
+  &--part {
+    position: relative;
+    overflow: hidden;
+
+    &:after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 25%;
+
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 1) 100%);
+    }
+  }
+
   @media only screen and (min-width : 850px) {
     max-width: 850px;
-    margin: 50px auto 75px;
+    margin: 50px auto;
     box-shadow: 0 0 50px -11px rgba(0, 0, 0, 0.55);
   }
 }
