--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -15,6 +15,34 @@
     box-shadow: rgba(0, 0, 0, 0.07) 0 1px 6px, rgba(0, 0, 0, 0.07) 0 1px 4px
   }
 
+  &__content {
+    position: relative;
+  }
+
+  &__content--wrapped {
+    // keep this in sync with the Post prop "wrapFromHeight"!
+    max-height: 300px;
+    overflow-y: hidden;
+  }
+
+  &__content-show-all {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+
+    text-align: center;
+
+    background: linear-gradient(to bottom,
+            rgba(255, 255, 255, 0.3) 0%,
+            rgba(255, 255, 255, 0.8) 20%,
+            rgba(255, 255, 255, 1) 60%,
+            rgba(255, 255, 255, 1) 100%
+    );
+  }
+
   &__card-actions {
     background-color: white;
     padding: 0;
