--- a/rtg/src/components/news/Comment.scss
+++ b/rtg/src/components/news/Comment.scss
@@ -31,8 +31,13 @@
   }
 
   &__content {
+    margin: 0;
+
     word-break: break-word;
     overflow-wrap: break-word;
+    white-space: pre-wrap;
+
+    font-family: 'Roboto', sans-serif;
   }
 
   &__actions {
