First working version of fixed header appearing only on up-scroll
Some tweaks still need to be done, see TODOs

--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -6,4 +6,5 @@ $zGameCardFlags: 200;
 $zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
 $zScheduleToolbar: 1000;
+$zHeader: 5000;
 $zDemoIndicator: 10000;
