--- a/rtg/src/components/header/Header.scss
+++ b/rtg/src/components/header/Header.scss
@@ -1,4 +1,11 @@
+@import '../../sass/_z-indexes.scss';
+
 .Header {
+  position: fixed;
+  width: 100%;
+  z-index: $zHeader;
+  transition: top 375ms cubic-bezier(0.23, 1, 0.32, 1);
+
   h1:hover {
     cursor: pointer;
   }
