--- a/rtg/src/components/header/Header.scss
+++ b/rtg/src/components/header/Header.scss
@@ -2,9 +2,14 @@
 
 .Header {
   position: fixed;
+  top: 0;
   width: 100%;
   z-index: $zHeader;
-  transition: top 375ms cubic-bezier(0.23, 1, 0.32, 1);
+  transition: top 0.2s cubic-bezier(0.23, 1, 0.32, 1);
+
+  &.nav-up {
+    top: -64px;
+  }
 
   h1:hover {
     cursor: pointer;
