Increase width of drawer menu on larger breakpoiints, always make them 80% of the screen width on mobile.

--- a/rtg/src/components/header/ProfileCard.scss
+++ b/rtg/src/components/header/ProfileCard.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
 
-  background-size: auto 100%;
+  background-size: cover;
 
   color: white;
   box-sizing: border-box;
