Improve styling of standings table usernames
* Remove unnecessary padding
* Expose rowHeight as dynamic StandingsTable property
* Allow long usernames to break in to two lines
  (losing the ellipsis overflow...)

--- a/rtg/src/components/standings/StandingsTableRow.scss
+++ b/rtg/src/components/standings/StandingsTableRow.scss
@@ -15,5 +15,12 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
+
+    &__username--multi-line {
+      white-space: normal;
+      overflow-wrap: break-word;
+      word-break: break-word;
+      overflow: hidden;
+    }
   }
 }
