Fine-tune styling of game card so that longer country names are visible and should (mostly) not overflow the page.

--- a/rtg/src/components/CountryFlag.scss
+++ b/rtg/src/components/CountryFlag.scss
@@ -2,12 +2,12 @@
 
 .CountryFlag {
   position: relative;
-  width: 95px;
   margin: 0 -25px;
   z-index: $zGameCardFlags;
 
   &__flag {
-    width: 100%;
+    width: 90px;
+    height: 90px;
   }
 
   &__name {
@@ -16,7 +16,6 @@
     margin-top: 5px;
     text-align: center;
     text-transform: uppercase;
-    overflow: hidden;
 
     font-size: 14px;
 
