--- a/rtg/src/components/GameCardRibbon.scss
+++ b/rtg/src/components/GameCardRibbon.scss
@@ -4,6 +4,7 @@
 
 .GameCardRibbon {
   &.bet { @include game-card-ribbon($ribbonBet, 65px, 75px); }
+  &.skeleton { @include game-card-ribbon(lighten($ribbonNeutral, 20%), 65px, 75px); }
   &.neutral { @include game-card-ribbon($ribbonNeutral, 65px, 75px); }
   &.niete { @include game-card-ribbon($ribbonNiete, 65px, 75px); }
   &.tendenz { @include game-card-ribbon($ribbonTendenz, 65px, 75px); }
@@ -16,6 +17,8 @@
   justify-content: center;
 
   color: white;
+
+  z-index: $zGameCardRibbon;
 
   &__content {
     box-sizing: border-box;
