--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -1,5 +1,6 @@
 $zAddNewsButton: 10;
 $zBigPictureHeading: 50;
+$zGameCardRibbon: 90;
 $zGameCardRibbonContent: 100;
 $zProfileCardContent: 100;
 $zGameCardFlags: 200;
