--- a/rtg/src/components/CountryFlag.scss
+++ b/rtg/src/components/CountryFlag.scss
@@ -21,7 +21,8 @@ $size: 90px;
     text-transform: uppercase;
 
     font-size: 14px;
-
+  }
+  &__name.auto-hide {
     @media only screen and (min-width : 680px) {
       display: none;
     }
