--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -24,12 +24,18 @@
   }
 
   .hometeam, .awayteam {
-    display: none;
+    display: flex;
     text-transform: uppercase;
     font-size: 20px;
 
+    &.auto-hide {
+      display: none;
+      @media only screen and (min-width : 680px) {
+        display: flex;
+      }
+    }
+
     @media only screen and (min-width : 680px) {
-      display: flex;
       align-items: center;
       flex-grow: 1
     }
