--- a/rtg/src/sass/mixins/_skeleton.scss
+++ b/rtg/src/sass/mixins/_skeleton.scss
@@ -1,5 +1,5 @@
 @mixin skeleton($animation-name, $shine-width: 25%, $shine-duration: 1.1s, $shine-animation: ease-in-out,
-                $background-color: #e3e3e3, $gradient-color: #fff) {
+                $shine-overflow: 30%, $background-color: #e3e3e3, $gradient-color: #fff) {
 
   background-color: $background-color;
   background-repeat: repeat-y;
@@ -14,7 +14,7 @@
 
   animation: $animation-name $shine-duration infinite $shine-animation;
   @keyframes #{$animation-name} {
-    from { background-position: -30% 0; }
-    to { background-position: 130% 0; }
+    from { background-position: -$shine-overflow 0; }
+    to { background-position: 100% + $shine-overflow 0; }
   }
 }
