--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -4,6 +4,7 @@ $zGameCardRibbon: 90;
 $zGameCardRibbonContent: 100;
 $zProfileCardContent: 100;
 $zGameCardFlags: 200;
+$zCurrentGamesScrollButton: 300;
 $zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
 $zScheduleToolbar: 1000;
