--- a/rtg/src/components/CountryFlag.scss
+++ b/rtg/src/components/CountryFlag.scss
@@ -15,9 +15,10 @@ $size: 90px;
   }
 
   &__name {
+    white-space: nowrap;
     position: absolute;
     width: 100%;
-    margin-top: 5px;
+    margin-top: 3px;
     text-align: center;
     text-transform: uppercase;
 
