--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
 
   width: 100%;
+  min-width: 320px;
   max-width: 1600px;
   margin: 20px auto 50px;
   padding: 0 10px;
