Move current games container onTouchMove
For this to work, we need to introduce another wrapper component
around the current game cards whose horizontal position is
manipulated onTouchMove.
The scroll animation does not yet continue into the final position.

--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -2,9 +2,6 @@
 
 .CurrentGames {
   position: relative;
-  display: flex;
-  align-content: center;
-  justify-content: space-between;
 
   width: 100%;
   min-width: 320px;
@@ -14,9 +11,17 @@
 
   box-sizing: border-box;
 
+  &__game-card-container {
+    position: relative;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+
+    width: 100%;
+  }
+
   &__scroll-button {
-    top: 2px;
-    z-index: $zCurrentGamesScrollButton;
+    top: -20px;
 
     @media only screen and (min-width : 375px) {
       top: 43%;
