--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -18,6 +18,7 @@
     justify-content: space-between;
 
     width: 100%;
+    overflow: hidden;
 
     &:not(.moving) {
       transition: transform 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
