--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -4,21 +4,24 @@
   position: relative;
 
   width: 100%;
+  height: 180px;
   min-width: 320px;
   max-width: 1600px;
-  margin: 20px auto 50px;
+  margin: 20px auto;
   padding: 0 10px;
 
   overflow: hidden;
   box-sizing: border-box;
 
   &__game-card-container {
-    position: relative;
+    position: absolute;
+    left: -100%;
+
     display: flex;
     align-content: center;
     justify-content: space-between;
 
-    width: 100%;
+    width: 300%;
 
     &:not(.moving) {
       transition: transform 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
