--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -6,8 +6,8 @@
   width: 100%;
   min-width: 320px;
   max-width: 1600px;
-  margin: 20px auto 50px;
-  padding: 0 10px;
+  margin: 0 auto;
+  padding: 20px 10px 30px;
 
   overflow: hidden;
   box-sizing: border-box;
@@ -26,7 +26,8 @@
   }
 
   &__scroll-button {
-    top: -20px;
+    top: 0;
+    z-index: $zCurrentGamesScrollButtons;
 
     @media only screen and (min-width : 375px) {
       top: 43%;
@@ -35,10 +36,12 @@
   }
 
   @media only screen and (min-width : 375px) {
-    padding: 0 40px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   @media only screen and (min-width : 768px) {
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
