Make sure that scroll buttons are positioned correctly, regardless of the container height
For this to work, we need to switch from relative top offset
to an absolute value.

--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -30,7 +30,7 @@
     z-index: $zCurrentGamesScrollButtons;
 
     @media only screen and (min-width : 375px) {
-      top: 43%;
+      top: 92px;
       margin: 0 20px;
     }
   }
