--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -4,24 +4,21 @@
   position: relative;
 
   width: 100%;
-  height: 180px;
+  height: 250px;
   min-width: 320px;
   max-width: 1600px;
   margin: 0 auto;
-  padding: 20px 10px 30px;
+  padding: 20px 0;
 
   overflow: hidden;
   box-sizing: border-box;
 
   &__game-card-container {
     position: absolute;
-    left: -100%;
 
     display: flex;
     align-content: center;
     justify-content: space-between;
-
-    width: 300%;
 
     &:not(.moving) {
       transition: transform 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
@@ -36,15 +33,5 @@
       top: 92px;
       margin: 0 20px;
     }
-  }
-
-  @media only screen and (min-width : 375px) {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-
-  @media only screen and (min-width : 768px) {
-    padding-left: 20px;
-    padding-right: 20px;
   }
 }
