--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -21,9 +21,11 @@
     justify-content: space-between;
 
     &:not(.moving) {
-      transition:
-              transform 200ms cubic-bezier(0.4, 0.0, 0.2, 1),
-              left 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
+      transition: transform 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    }
+
+    &.scrolling {
+      transition: left 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
     }
   }
 
