--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -20,8 +20,10 @@
     align-content: center;
     justify-content: space-between;
 
-    &.scrolling {
-      transition: transform 280ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    transition: transform 280ms cubic-bezier(0.4, 0.0, 0.2, 1);
+
+    &.no-animate {
+      transition: none;
     }
   }
 
