--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -1,3 +1,4 @@
+@import '../../sass/utils';
 @import '../../sass/z-indexes';
 
 .CurrentGames {
@@ -20,7 +21,7 @@
     align-content: center;
     justify-content: space-between;
 
-    transition: transform 280ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    transition: transform 280ms $mdEasingStandard;
 
     &.no-animate {
       transition: none;
