--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -1,4 +1,5 @@
-@import '../../sass/colors.scss';
+@import '../../sass/colors';
+@import '../../sass/utils';
 
 .Post {
   &__card {
@@ -71,7 +72,7 @@
     background-color: lighten($lightGrey, 27%);
     box-shadow: inset 0 2px 6px -2px rgba(0,0,0,0.25);
 
-    animation: commentHeight 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    animation: commentHeight 375ms $mdEasingStandard;
 
     @keyframes commentHeight {
       from { max-height: 0; }
