--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -21,7 +21,11 @@
     align-content: center;
     justify-content: space-between;
 
-    transition: transform 280ms $mdEasingStandard;
+    transition: transform 300ms $mdEasingDecelerate;
+
+    @media only screen and (min-width : 768px) {
+      transition: transform 500ms $mdEasingDecelerate;
+    }
 
     &.no-animate {
       transition: none;
