--- a/rtg/src/components/GameCardRibbon.scss
+++ b/rtg/src/components/GameCardRibbon.scss
@@ -21,8 +21,6 @@
   z-index: $zGameCardRibbon;
 
   &__content {
-    box-sizing: border-box;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,6 +28,9 @@
     height: 100%;
     width: 100%;
 
+    user-select: none;
+
+    box-sizing: border-box;
     z-index: $zGameCardRibbonContent;
   }
 }
