--- a/rtg/src/components/currentgames/CurrentGames.scss
+++ b/rtg/src/components/currentgames/CurrentGames.scss
@@ -14,6 +14,12 @@
   overflow: hidden;
   box-sizing: border-box;
 
+  transition: height 300ms $mdEasingStandard;
+
+  &.bet-stats-open {
+    height: 650px;
+  }
+
   &__game-card-container {
     position: absolute;
 
@@ -30,6 +36,12 @@
     &.no-animate {
       transition: none;
     }
+  }
+
+  &__game-card-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
 
   &__scroll-button {
