--- a/rtg/src/components/bets/BetStatsPanel.scss
+++ b/rtg/src/components/bets/BetStatsPanel.scss
@@ -1,14 +1,11 @@
 @import '../../sass/utils';
 
 .BetStatsPanel {
-  margin: 0;
+  margin: 10px 0;
 
-  transition:
-          box-shadow 300ms $mdEasingStandard 100ms,
-          margin-top 300ms $mdEasingStandard 100ms;
+  transition: box-shadow 300ms $mdEasingStandard 100ms;
 
   &.open {
-    margin-top: 20px;
     box-shadow: 0 0 50px -11px rgba(0, 0, 0, 0.55);
   }
 
@@ -29,6 +26,6 @@
   }
 
   @media (min-width: 480px) {
-    margin: 0 20px;
+    margin: 10px;
   }
 }
