--- a/rtg/src/components/header/DrawerMenu.scss
+++ b/rtg/src/components/header/DrawerMenu.scss
@@ -1,9 +1,17 @@
 .DrawerMenu {
   text-align: left;
 
-  &__paypal-link {
-    color: black;
+  &__payment-hint {
     padding: 15px;
+    text-align: center;
+
+    > * {
+      margin: 5px 0;
+    }
+  }
+
+  &__paypal-link {
+    padding: 10px;
 
     display: flex;
     flex-direction: column;
@@ -11,13 +19,13 @@
 
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 
-    > * {
-      margin: 5px 0;
-    }
-
     &:hover {
       background-color: rgba(55, 45, 45, 0.1);
     }
+  }
+
+  &__bank-account {
+    font-size: 14px;
   }
 
   a {
