Add styling for (basic) loading and error state, updated TODOs

--- a/rtg/src/components/bets/BetStatsPanel.scss
+++ b/rtg/src/components/bets/BetStatsPanel.scss
@@ -3,10 +3,12 @@
 // TODO P3 make expanding of bet stats smoother
 .BetStatsPanel {
   margin: 0;
+  width: 100%;
 
   transition: box-shadow 300ms $mdEasingStandard 100ms;
 
   &.open &__inner {
+    width: 100%;
     padding-top: 10px;
     box-shadow: 0 0 50px -11px rgba(0, 0, 0, 0.55);
   }
