--- a/rtg/src/components/news/AddPostForm.scss
+++ b/rtg/src/components/news/AddPostForm.scss
@@ -18,7 +18,7 @@
 
   &__button-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
   }
 
   &__feedback {
