--- a/rtg/src/components/news/AddPostForm.scss
+++ b/rtg/src/components/news/AddPostForm.scss
@@ -1,3 +1,5 @@
+@import '../../sass/colors';
+
 .AddPostForm {
   margin: -60px 0 50px;
   text-align: left;
@@ -14,6 +16,22 @@
 
   &__heading {
     margin: 0;
+  }
+
+  &__draft-info {
+    text-align: right;
+    font-size: 14px;
+    color: $lightGrey;
+
+    &--success,
+    &--error {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+    }
+
+    &--success { color: $success; }
+    &--error { color: $error; }
   }
 
   &__button-row {
