Improve positioning off news add button a bit
Avoid huge padding at the bottom of the section.
Make elements below the add button row clickable.

However, left to the button are still not clickable because
it lies over them... Why does the add button wrapper have to have
a 100% width? absolute positioning with right does not work.

--- a/rtg/src/components/news/News.scss
+++ b/rtg/src/components/news/News.scss
@@ -7,11 +7,9 @@
 
   &__add-button {
     position: sticky;
-    padding: 0 24px 95px;
-    bottom: 0;
-
+    margin-right: 24px;
+    bottom: 95px;
     text-align: right;
-    z-index: $zAddNewsButton;
   }
 
   &__empty-state {
