--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -18,6 +18,11 @@
 
   &__content {
     position: relative;
+
+    h1, h2, h3, h4, h5, h6, p {
+      margin: 0;
+      padding: 0;
+    }
   }
 
   &__content--wrapped {
