Manipulate font-size and -family of Quill editor; update TODOs

--- a/rtg/src/components/news/AddPostForm.scss
+++ b/rtg/src/components/news/AddPostForm.scss
@@ -18,6 +18,11 @@
     margin: 0;
   }
 
+  .ql-editor {
+    font-family: 'Roboto', sans-serif;
+    font-size: 130%;
+  }
+
   &__draft-info {
     text-align: right;
     font-size: 14px;
