Save some more vertical space on mobile
Remove welcome section altogether.
Make pictures and current games section a bit less high.

--- a/rtg/src/pages/Foyer.scss
+++ b/rtg/src/pages/Foyer.scss
@@ -1,9 +1,12 @@
 .Foyer {
   &__welcome {
+    display: none;
+
     position: relative;
     padding: 10px 0;
 
     @media only screen and (min-width : 480px) {
+      display: block;
       padding: 20px 0;
     }
 
