--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -7,7 +7,7 @@
   margin: 0;
   padding: 20px;
 
-  height: 200px;
+  height: 145px;
 
   text-align: center;
 
@@ -46,6 +46,10 @@
   }
 
   @media only screen and (min-width : 480px) {
-    height: 300px;
+    height: 260px;
+  }
+
+  @media only screen and (min-width : 1024px) {
+    height: 350px;
   }
 }
