--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -1,5 +1,4 @@
 $zCurrentGamesScrollButtons: 1;
-$zAddNewsButton: 10;
 $zBigPictureHeading: 50;
 $zGameCardRibbon: 90;
 $zGameCardRibbonContent: 100;
@@ -7,6 +6,7 @@ $zProfileCardContent: 100;
 $zGameCardFlags: 200;
 $zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
+$zAddGameButton: 700;
 $zBetsTabs: 1000;
 $zScheduleToolbar: 1000;
 $zHeader: 1100;
