Display points and emphasise 'Volltreffer' in standings table bet col

--- a/rtg/src/components/ExtraBetCard.scss
+++ b/rtg/src/components/ExtraBetCard.scss
@@ -43,10 +43,10 @@
 
   &__result-info--finished {
     color: white;
-    background-color: $ribbonNiete;
+    background-color: $betResultNiete;
 
     &.volltreffer {
-      background-color: $ribbonVolltreffer;
+      background-color: $betResultVolltreffer;
     }
   }
 
