--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -49,7 +49,7 @@
     );
   }
 
-  &__card-actions {
+  &__author-and-comments {
     background-color: white;
     padding: 0;
     border-top: 1px solid lighten($lightGrey, 20%);
