--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -49,8 +49,13 @@
     );
   }
 
+  &__author-and-comments,
+  &__add-comment,
+  &__comments {
+    background-color: lighten($lightGrey, 28%);
+  }
+
   &__author-and-comments {
-    background-color: white;
     padding: 0;
     border-top: 1px solid lighten($lightGrey, 20%);
   }
@@ -73,15 +78,7 @@
   }
 
   &__comments {
-    border-top: 1px solid lighten($lightGrey, 20%);
-    background-color: lighten($lightGrey, 27%);
-    box-shadow: inset 0 2px 6px -2px rgba(0,0,0,0.25);
-
-    animation: commentHeight 375ms $mdEasingStandard;
-
-    @keyframes commentHeight {
-      from { max-height: 0; }
-      to { max-height: 85vh; }
-    }
+    max-height: 85vh;
+    overflow-y: auto;
   }
 }
