--- a/rtg/src/components/UserDetailsPopover.scss
+++ b/rtg/src/components/UserDetailsPopover.scss
@@ -8,7 +8,7 @@ $avatarSize: 140px;
   min-width: 300px;
   max-width: 300px;
 
-  margin: 0 0 13px 10px;
+  margin: 0;
 
   background: transparent;
 
