Material UI 1.x upgrade: PasswordReset page

--- a/rtg/src/pages/PasswordReset.scss
+++ b/rtg/src/pages/PasswordReset.scss
@@ -1,13 +1,9 @@
-.PasswordResetPage {
-
-}
-
 .PasswordResetForm {
   position: relative;
   padding: 20px;
   margin: 30px auto;
   width: 100%;
-  text-align: left;
+  box-sizing: border-box;
 
   @media only screen and (min-width : 480px) {
     max-width: 480px;
