--- a/rtg/src/components/header/DrawerMenu.scss
+++ b/rtg/src/components/header/DrawerMenu.scss
@@ -1,3 +1,5 @@
+@import '../../sass/colors';
+
 .DrawerMenu {
   text-align: left;
 
@@ -29,9 +31,11 @@
   }
 
   a {
+    color: $black;
     text-decoration: none;
 
     &:hover, &:focus, &:active {
+      color: $black;
       text-decoration: none;
     }
   }
