--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -5,17 +5,21 @@ body {
   text-align: center;
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: Lobster Two, cursive;
-    font-weight: normal;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 500;
     font-style: normal;
   }
 
-  h1 { font-size: 40px; }
-  h2 { font-size: 32px; }
-  h3 { font-size: 28px; }
-  h4 { font-size: 22px; }
+  h1, h2, h3 {
+    text-transform: uppercase;
+  }
+
+  h1 { font-size: 30px; }
+  h2 { font-size: 28px; }
+  h3 { font-size: 24px; }
+  h4 { font-size: 24px; }
   h5 { font-size: 18px; }
-  h6 { font-size: 14px; }
+  h6 { font-size: 16px; }
 
 }
 
