--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -28,10 +28,13 @@
   }
 
   &__heading {
+    font-weight: 700;
+    font-size: 36px;
+
     color: white;
     z-index: $zBigPictureHeading;
 
-    text-shadow: black 1px 1px 4px;
+    text-shadow: black 0 0 6px;
   }
 
   &:after {
@@ -42,7 +45,7 @@
     height: 100%;
     content: '';
 
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
   }
 
   @media only screen and (min-width : 480px) {
