Refactor post comments to eliminate circular dep
In this commit I'm able to get rid of a circular dependency
between CommentsList and Comment components. This could be solved by
recursively rendering <Comment>'s and their replies. <CommentsList> is
only used as top level component in the Post.

This also makes the components more concise and the code a bit more
readable.

I got rid of the "load more replies" button for nested comments as it is
not really required at this time. There are rarely so many nested
comments so far that this would be needed.

--- a/rtg/src/components/news/Comment.scss
+++ b/rtg/src/components/news/Comment.scss
@@ -2,6 +2,16 @@
 
 // TODO P3 animate new comments with fading background color
 .Comment {
+  padding-left: 10px;
+  margin: 0 0 15px 3vw;
+
+  border-left: 1px solid lighten($lightGrey, 15%);
+
+  &--top-level {
+    margin-left: 0;
+    border-left: 0;
+  }
+
   &__avatar-content-wrapper {
     display: flex;
     align-items: flex-start;
@@ -42,6 +52,6 @@
 
   &__actions {
     text-align: left;
-    margin-bottom: 5px;
+    margin: 0 0 5px 42px;
   }
 }
