Get rid of "welcome" section
It didn't have much use but took a lot of vertical screen space.

--- a/rtg/src/pages/Foyer.scss
+++ b/rtg/src/pages/Foyer.scss
@@ -1,60 +1,13 @@
 .Foyer {
-  &__welcome {
-    display: none;
-
-    position: relative;
-    padding: 10px 0;
-
-    @media only screen and (min-width : 480px) {
-      display: block;
-      padding: 20px 0;
-    }
-
-    &:before {
-      position: absolute;
-      content: '';
-      background: linear-gradient(to right,
-              rgba(255, 255, 255, 0) 0%,
-              rgba(255, 255, 255, 0.6) 50%,
-              rgba(255, 255, 255, 0) 100%);
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      z-index: -1;
-    }
-
-    &:after {
-      position: absolute;
-      content: '';
-      background: url(../theme/img/damask-pattern-400.jpg) repeat;
-      opacity: 0.85;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: -2;
-    }
-  }
-
-  &__top-logo {
-    display: none;
-    width: 50px;
-
-    @media only screen and (min-width : 480px) {
-      display: inline;
-    }
-  }
-
-  &__greeting {
-    margin: 0;
-    word-break: break-word;
-    overflow-wrap: break-word;
-  }
-
   &__first-visit {
-    margin: 20px auto;
+    right: 0;
+    bottom: 50px;
+    left: 0;
     max-width: 480px;
+
+    margin: 0 auto;
+
+    z-index: 10000;
   }
 
   &__news {
