--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -15,6 +15,10 @@ body {
     text-transform: uppercase;
   }
 
+  h4 {
+    text-decoration: underline;
+  }
+
   h1 { font-size: 30px; }
   h2 { font-size: 28px; }
   h3 { font-size: 24px; }
