--- a/rtg/src/components/foyer/StandingsOverview.scss
+++ b/rtg/src/components/foyer/StandingsOverview.scss
@@ -1,9 +1,11 @@
 .StandingsOverview {
-  margin: 20px auto 10px;
-  max-width: 640px;
+  min-width: 320px;
 
-  @media only screen and (min-width : 640px) {
-    margin: 50px auto 10px;
-    box-shadow: 0 0 50px -11px rgba(0, 0, 0, 0.55);
+  @media only screen and (min-width: 768px) {
+    padding: 0 15px;
+  }
+
+  @media only screen and (min-width: 1480px) {
+    min-width: 480px;
   }
 }
