--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -13,7 +13,21 @@
   }
 
   &__card-title {
-    box-shadow: rgba(0, 0, 0, 0.07) 0 1px 6px, rgba(0, 0, 0, 0.07) 0 1px 4px
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.07) 0 1px 6px, rgba(0, 0, 0, 0.07) 0 1px 4px;
+    z-index: 0;
+  }
+
+  &__card-title:after {
+    position: absolute;
+    content: '';
+    background: url(../../theme/img/damask-pattern-400.jpg) repeat;
+    opacity: 0.65;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
   }
 
   &__content {
