--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -15,6 +15,16 @@
     height: 250px;
   }
 
+  &--large {
+    height: 200px;
+    @media only screen and (min-width : 480px) {
+      height: 250px;
+    }
+    @media only screen and (min-width : 1024px) {
+      height: 350px;
+    }
+  }
+
   text-align: center;
 
   display: flex;
