--- a/rtg/src/pages/Foyer.scss
+++ b/rtg/src/pages/Foyer.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     max-width: 1480px;
     margin: 0 auto;
+    padding-bottom: 20px;
 
     @media only screen and (min-width : 768px) {
       flex-direction: row;
